--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ php:
 
 before_script: composer install
 script: phpunit --bootstrap vendor/autoload.php tests
+notifications:
+  webhooks: https://www.gnello.com/actions/test.php
