--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,4 @@ php:
   - 7.0
 
 before_script: composer install
-script: phpunit --bootstrap vendor/autoload.php tests
-notifications:
-  webhooks: https://www.gnello.com/actions/test.php
+script: vendor/bin/phpunit --bootstrap vendor/autoload.php tests
