--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "issues": "https://github.com/gnello/webhook-manager/issues"
   },
   "require": {
-    "php": ">=7"
+    "php": ">=7.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
