--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
+    "phpunit/phpunit": "^8.0",
     "symfony/var-dumper": "^3.1"
   },
   "autoload": {
